--- a/index.html
+++ b/index.html
@@ -6,19 +6,16 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" type="text/css" href="css/reset.css" />
     <link rel="stylesheet" type="text/css" href="css/index.css" />
-    <script>
-      console.log(document.querySelector("h1"));
-    </script>
   </head>
   <body>
     <header>
       <div class="container">
-        <h1>Aparecida Nutrição</h1>
+        <h1 class="titulo">Nutricionismo</h1>
       </div>
     </header>
     <main>
       <section class="container">
-        <h2>Meus pacientes</h2>
+        <h2>Pacientes</h2>
         <table>
           <thead>
             <tr>
@@ -30,7 +27,7 @@
             </tr>
           </thead>
           <tbody id="tabela-pacientes">
-            <tr class="paciente">
+            <tr class="paciente" id="primeiro-paciente">
               <td class="info-nome">Paulo</td>
               <td class="info-peso">100</td>
               <td class="info-altura">2.00</td>
@@ -49,7 +46,7 @@
             <tr class="paciente">
               <td class="info-nome">Erica</td>
               <td class="info-peso">54</td>
-              <td class="info-altura">1.64</td>
+              <td class="info-altura">3</td>
               <td class="info-gordura">14</td>
               <td class="info-imc">0</td>
             </tr>
@@ -72,5 +69,55 @@
         </table>
       </section>
     </main>
+    <section class="container">
+      <h2 id="titulo-form">Adicionar novo paciente</h2>
+      <form id="form-adiciona">
+        <div class="grupo">
+          <label for="nome">Nome:</label>
+          <input
+            id="nome"
+            name="nome"
+            type="text"
+            placeholder="digite o nome do seu paciente"
+            class="campo"
+          />
+        </div>
+        <div class="grupo">
+          <label for="peso">Peso:</label>
+          <input
+            id="peso"
+            name="peso"
+            type="text"
+            placeholder="digite o peso do seu paciente"
+            class="campo campo-medio"
+          />
+        </div>
+        <div class="grupo">
+          <label for="altura">Altura:</label>
+          <input
+            id="altura"
+            name="altura"
+            type="text"
+            placeholder="digite a altura do seu paciente"
+            class="campo campo-medio"
+          />
+        </div>
+        <div class="grupo">
+          <label for="gordura">% de Gordura:</label>
+          <input
+            id="gordura"
+            type="text"
+            placeholder="digite a porcentagem de gordura do seu paciente"
+            class="campo campo-medio"
+          />
+        </div>
+
+        <button id="adicionar-paciente" class="botao bto-principal">
+          Adicionar
+        </button>
+      </form>
+    </section>
+
+    <script src="js/main.js"></script>
   </body>
 </html>
