insert date(form) in table

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       </section>
     </main>
     <section class="container">
-      <h2 id="titulo-form">Adicionar novo paciente</h2>
+      <h2 id="titulo-form">Adicionar paciente</h2>
       <form id="form-adiciona">
         <div class="grupo">
           <label for="nome">Nome:</label>
