--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
       </form>
     </section>
 
-    <script src="js/main.js"></script>
+    <script src="js/imc.js"></script>
+    <script src="js/form.js"></script>
   </body>
 </html>
