--- a/index.html
+++ b/index.html
@@ -121,5 +121,6 @@
 
     <script src="js/imc.js"></script>
     <script src="js/form.js"></script>
+    <script src="js/remove-paciente.js"></script>
   </body>
 </html>
