--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
     <main>
       <section class="container">
         <h2>Pacientes</h2>
+        <label for="filtrar-tabela">Filtre:</label>
+        <input
+          type="text"
+          name="filtro"
+          id="filtrar-tabela"
+          placeholder="Digite o nome do paciente"
+        />
         <table>
           <thead>
             <tr>
@@ -122,5 +129,6 @@
     <script src="js/imc.js"></script>
     <script src="js/form.js"></script>
     <script src="js/remove-paciente.js"></script>
+    <script src="js/filtra.js"></script>
   </body>
 </html>
