--- a/index.html
+++ b/index.html
@@ -74,6 +74,12 @@
             </tr>
           </tbody>
         </table>
+        <span id="erro-ajax" class="invisivel">
+          Erro ao buscar os Pacientes</span
+        >
+        <button id="buscar-pacientes" class="botao bto-principal">
+          Buscar Pacientes
+        </button>
       </section>
     </main>
     <section class="container">
@@ -130,5 +136,6 @@
     <script src="js/form.js"></script>
     <script src="js/remove-paciente.js"></script>
     <script src="js/filtra.js"></script>
+    <script src="js/buscar-pacientes.js"></script>
   </body>
 </html>
